  * Scripting (ScriptMeasure and ScriptController):
  	* Added support store_data() for writing data to .sto and SCONE analysis window
  	* Improved error handling and reporting for scripts
  	* added body:point_pos and body:point_vel
  	* added functionality to LuaVec3 and LuaQuat (see reference manual)
  * Added warning in folder preferences dialog to avoid network drives (issue #53)
  * When pressing Ctrl + T or Ctrl + F5 while a .lua file is active, scone tries to open a .scone instead.
  * Updated tutorials and documentation

=== Fixes ===
  * All open files are now checked for modification when running a scenario
  * Close current tab (Ctrl+W) now works correctly
  * Jump tutorials now use correct init_file
  * JumpMeasure now supports both 'body' and 'target_body', matching documentation and maintaining backwards compatibility
  * Text modification detection now works properly with undo
  * Text documents are now automatically focused when opened

==== SCONE 1.1.1 ====
//Released May 29, 2019//

=== New Features and Updates ===
  * Added new MuscleMeasure for penalizing muscle activation, length and contraction velocity (issue #36).
  * RangePenalty now supports 'mode' setting, allowing the final penalty to be the 'average' (default), 'lowest', or 'highest' of all recorded
  * New measure_type in EfforMeasure: SquaredMuscleStress. This minimizes the sum of (F/PCSA)^2 for all muscles.
  * Controllers now have 'name' member that is used as a prefix for all parameter names. This should prevent undesired parameter name clashes when combining controllers. CompositeController displays warning when child controllers have identical names.
  * Added warning in folder preferences dialog to avoid network drives (issue #53)
  * Documentation updates
  * Tutorial updates

=== Fixes ===
  * SequentialController now works correctly
  * NoiseController more accurately handles cases where the noise STD is zero
  * tutorial 6b, renamed 'gyro' to 'external balance device'
